# tinyssl

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MODEL_CARD.md  README.md  hubconf.py  index.html  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
notebooks/: TinySSL_Colab.ipynb  colab_demo.ipynb  colab_full.py  colab_template.ipynb
paper/: main.tex  neurips_2024.sty
scripts/: upload_to_huggingface.py
tinyssl/: __init__.py  requirements.txt
tinyssl/configs/: default.yaml
tinyssl/losses/: __init__.py  all_losses.py
tinyssl/models/: students.py  teacher_wrapper.py
tinyssl/scripts/: upload_to_huggingface.py
tinyssl/tests/: conftest.py  test_e2e.py
tinyssl/train/: cache_features.py  evaluate.py  pretrain.py  train_baselines.py
tinyssl/utils/: augmentations.py  visualization.py
